Set container div min height to avoid clipping search result page's loading icon

--- a/DNN Platform/Website/DesktopModules/Admin/SearchResults/module.css
+++ b/DNN Platform/Website/DesktopModules/Admin/SearchResults/module.css
@@ -88,6 +88,7 @@
 
 .dnnSearchResultContainer {
     margin: 30px 0 0 0;
+    min-height: 50px;
 }
 
 .dnnSearchLoading {
